// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderBlockWidth renders 0 1`] = `
Array [
  .c0 {
  border-block-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockWidth renders function 1`] = `
Array [
  .c0 {
  border-block-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  border-block-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockWidth renders negative number 1`] = `
Array [
  .c0 {
  border-block-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-block-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-block-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockWidth renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-block-width: July;
  }
}

@media April {
  .c0 {
    border-block-width: August;
  }
}

@media January {
  .c0 {
    border-block-width: September;
  }
}

@media April {
  .c0 {
    border-block-width: November;
  }
}

@media June {
  .c0 {
    border-block-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-block-width: July;
  }
}

@media April {
  .c0 {
    border-block-width: August;
  }
}

@media January {
  .c0 {
    border-block-width: September;
  }
}

@media April {
  .c0 {
    border-block-width: November;
  }
}

@media June {
  .c0 {
    border-block-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-width: January;
  }
}

@media April {
  .c0 {
    border-block-width: December;
  }
}

@media January {
  .c0 {
    border-block-width: April;
  }
}

@media April {
  .c0 {
    border-block-width: May;
  }
}

@media June {
  .c0 {
    border-block-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-width: January;
  }
}

@media April {
  .c0 {
    border-block-width: December;
  }
}

@media January {
  .c0 {
    border-block-width: April;
  }
}

@media April {
  .c0 {
    border-block-width: May;
  }
}

@media June {
  .c0 {
    border-block-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockWidth renders postitive number 1`] = `
Array [
  .c0 {
  border-block-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockWidth renders string 1`] = `
Array [
  .c0 {
  border-block-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockWidth renders valid theme path 1`] = `
Array [
  .c0 {
  border-block-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
